# jimp-exercises

lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/multiplicationtable/: CMakeLists.txt  MultiplicationTable.cpp  MultiplicationTable.h  PrintMultiplicationTable.cpp  PrintMultiplicationTable.h  main.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab10/academiascheduler/: Scheduler.cpp  Scheduler.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h
lab11/factorymethod/: FactoryMethod.cpp  FactoryMethod.h
lab12/academiasequentialgenerator/: SequentialGenerator.cpp  SequentialGenerator.h
lab12/academiateacherhash/: TeacherHash.cpp  TeacherHash.h  main.cpp
lab12/timerecorder/: TimeRecorder.cpp  TimeRecorder.h  main.cpp
lab12/tree/: CMakeLists.txt  Tree.cpp  Tree.h  TreeIterators.cpp  TreeIterators.h  main.cpp
lab13/arabicroman/: ArabicRoman.cpp  ArabicRoman.h  main.cpp
lab2/: Zad2_jimp2.cpp
lab2/array2D/: Array2D.cpp  Array2D.h  main.cpp
lab2/array2d/: Array2d.cpp  Array2d.h  CMakeLists.txt  main.cpp
lab2/greatestproduct/: GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp
lab2/simpleforwardlist/: CMakeLists.txt  ForwardList.cpp  ForwardList.h  main.cpp  vbgvvbbcv.txt
lab5/: CMakeLists.txt
lab6/: CMakeLists.txt
lab7/: CMakeLists.txt
lab7/Ksztalt/: CMakeLists.txt  Kolo.cpp  Kolo.h  Ksztalt.cpp  Ksztalt.h  Kwadrat.cpp  Kwadrat.h  Trojkat.cpp  Trojkat.h  main.cpp
lab7/academiaqueries/: CMakeLists.txt  Student.cpp  Student.h  StudentRepository.cpp  StudentRepository.h  StudentRepositoryQueries.cpp  StudentRepositoryQueries.h  StudyYear.cpp  StudyYear.h  main.cpp
lab8/: CMakeLists.txt
(+95 files in other folders)
